fix style and hide  scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -220,6 +220,14 @@
     background-color: var(--dark);
     color: var(--white);
   }
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
 @layer components {
